ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.24
    • Affects Version/s: 8.0.0
    • Component/s: None
    • None
    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Currently, in 8.0, `_subpipeline` can be set to `null` during a $group stage. If this occurs, and then a getMore is issued, an invalid address can be accessed, causing a crash. This is the cause of AF-15157. To avoid further crashes, _subPipeline should be checked to ensure it is not null before member functions are accessed.

       

      This has already been fixed in master.

            Assignee:
            Kyle Burgess
            Reporter:
            Kyle Burgess
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: