SERVER-123688 Add null check in DocumentSourceSetVariableFromSubPipeline::reattachToOperationContext() (#51435)

GitOrigin-RevId: fbd93a26d49362658e4cc9418cf07ff9b31438d1