src/mongo/db/pipeline/document_source_set_variable_from_subpipeline.cpp
@@ -156,7 +156,9 @@ void DocumentSourceSetVariableFromSubPipeline::detachFromOperationContext() {
 }
 
 void DocumentSourceSetVariableFromSubPipeline::reattachToOperationContext(OperationContext* opCtx) {
-    _subPipeline->reattachToOperationContext(opCtx);
+    if (_subPipeline) {
+        _subPipeline->reattachToOperationContext(opCtx);
+    }
 }
 
 bool DocumentSourceSetVariableFromSubPipeline::validateOperationContext(
